--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,16 @@ header a:visited {
   font-family: "Caveat-Regular", serif;
   font-size: 1.5em;
   font-weight: lighter;
+  letter-spacing: 1px;
+}
+@media screen and (max-width: 1199px) {
+  .menu-1 {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .block__title-1 {
@@ -261,6 +271,11 @@ header a:visited {
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .block__title-1 {
+    flex-direction: column;
+  }
 }
 .block__title-1 h4 {
   padding-left: 120px;
@@ -296,6 +311,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-2 {
+    flex-direction: column;
+  }
+}
 .block__title-2 h4 {
   padding-left: 80px;
   padding-right: 80px;
@@ -330,6 +350,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3 {
+    flex-direction: column;
+  }
+}
 .block__title-3 h4 {
   padding-left: 50px;
   padding-right: 50px;
@@ -360,6 +385,11 @@ header a:visited {
 .section__header {
   text-align: center;
 }
+@media screen and (max-width: 768px) {
+  .section__header {
+    padding-bottom: 30px;
+  }
+}
 .section__header h3 {
   font-size: 2.5em;
   font-family: "Devonshire", cursive;
@@ -377,6 +407,13 @@ header a:visited {
   padding-right: 50px;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+@media screen and (max-width: 1199px) {
+  .block__meals-line {
+    flex-wrap: wrap;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
 .section__footer {
@@ -414,6 +451,16 @@ header a:visited {
   font-family: "Caveat-Regular", serif;
   font-size: 1.5em;
   font-weight: lighter;
+  letter-spacing: 1px;
+}
+@media screen and (max-width: 1199px) {
+  .menu-4-4 {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .block__title-4-1 {
@@ -422,6 +469,11 @@ header a:visited {
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .block__title-4-1 {
+    flex-direction: column;
+  }
 }
 .block__title-4-1 h4 {
   padding-left: 80px;
@@ -457,6 +509,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-4-2 {
+    flex-direction: column;
+  }
+}
 .block__title-4-2 h4 {
   padding-left: 15px;
   padding-right: 15px;
@@ -491,6 +548,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-4-3 {
+    flex-direction: column;
+  }
+}
 .block__title-4-3 h4 {
   padding-left: 10px;
   padding-right: 10px;
@@ -522,6 +584,11 @@ header a:visited {
   text-align: center;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 768px) {
+  .section__header-4 {
+    padding-bottom: 30px;
+  }
+}
 .section__header-4 h3 {
   font-size: 3em;
   font-family: "KaushanScript", cursive;
@@ -545,22 +612,12 @@ header a:visited {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-
-.section__footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
-}
-.section__footer h3 {
-  padding-left: 20px;
-  font-family: "Devonshire", cursive;
-  font-size: 2em;
-  font-weight: lighter;
-  color: #3d1319;
-}
-.section__footer img {
-  max-height: 60px;
+@media screen and (max-width: 1199px) {
+  .block__meals-line-4 {
+    flex-wrap: wrap;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
 header a {
@@ -581,15 +638,16 @@ header a:visited {
   font-family: "Times New Roman", Times, serif;
   font-size: 1.5em;
   font-weight: lighter;
+  letter-spacing: 1px;
 }
-
-.block__meals-line {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 5px;
-  padding-bottom: 10px;
+@media screen and (max-width: 1199px) {
+  .menu-2-2 {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .block__title-2-1 {
@@ -598,6 +656,11 @@ header a:visited {
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .block__title-2-1 {
+    flex-direction: column;
+  }
 }
 .block__title-2-1 h4 {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -631,6 +694,11 @@ header a:visited {
   text-align: center;
   padding-bottom: 100px;
 }
+@media screen and (max-width: 768px) {
+  .section__header-2 {
+    padding-bottom: 30px;
+  }
+}
 .section__header-2 h3 {
   font-size: 2.5em;
   font-family: "YesevaOne", serif;
@@ -658,6 +726,11 @@ header a:visited {
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .block__title-2-2 {
+    flex-direction: column;
+  }
 }
 .block__title-2-2 h4 {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -704,6 +777,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-2-3 {
+    flex-direction: column;
+  }
+}
 .block__title-2-3 h4 {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1em;
@@ -742,6 +820,22 @@ header a:visited {
   padding-right: 60px;
 }
 
+.block__meals-line {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+@media screen and (max-width: 1199px) {
+  .block__meals-line {
+    flex-wrap: wrap;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
 header a {
   text-decoration: none;
 }
@@ -760,6 +854,16 @@ header a:visited {
   font-family: "Caveat-Regular", serif;
   font-size: 1.5em;
   font-weight: lighter;
+  letter-spacing: 1px;
+}
+@media screen and (max-width: 1199px) {
+  .menu-3 {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .block__title-3-1 {
@@ -768,6 +872,11 @@ header a:visited {
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+@media screen and (max-width: 1199px) {
+  .block__title-3-1 {
+    flex-direction: column;
+  }
 }
 .block__title-3-1 h4 {
   padding-left: 50px;
@@ -803,6 +912,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3-2 {
+    flex-direction: column;
+  }
+}
 .block__title-3-2 h4 {
   padding-left: 50px;
   padding-right: 50px;
@@ -837,6 +951,11 @@ header a:visited {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 1199px) {
+  .block__title-3-3 {
+    flex-direction: column;
+  }
+}
 .block__title-3-3 h4 {
   padding-left: 50px;
   padding-right: 50px;
@@ -868,6 +987,11 @@ header a:visited {
   text-align: center;
   padding-bottom: 100px;
 }
+@media screen and (max-width: 768px) {
+  .section__header-3 {
+    padding-bottom: 30px;
+  }
+}
 .section__header-3 h3 {
   font-size: 3em;
   font-family: "Dancing Script", cursive;
@@ -890,6 +1014,13 @@ header a:visited {
   padding-right: 50px;
   padding-top: 5px;
   padding-bottom: 10px;
+}
+@media screen and (max-width: 1199px) {
+  .block__meals-line {
+    flex-wrap: wrap;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
 .section__footer {
