--- a/sass/pages/la_note_enchantee.scss
+++ b/sass/pages/la_note_enchantee.scss
@@ -16,6 +16,14 @@ header a {
     font-family: $font-secondary;
     font-size: 1.5em;
     font-weight: lighter;
+    letter-spacing: 1px;
+    @media screen and (max-width: 1199px) {
+       width: 90%;
+       display: flex;
+       flex-direction: column;
+       padding-top: 30px;
+       padding-bottom: 30px;
+      }
 }
 
 .block__title-1 {
@@ -24,6 +32,9 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 120px;
         padding-right: 120px;
@@ -59,6 +70,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 80px;
         padding-right: 80px;
@@ -94,6 +108,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 50px;
         padding-right: 50px;
@@ -125,6 +142,9 @@ h4:before {
 
 .section__header {
     text-align: center;
+    @media screen and (max-width: 768px) {
+        padding-bottom: 30px;
+    }
     & h3 {
     font-size: 2.5em;
     font-family: $font-note;
@@ -143,6 +163,11 @@ h4:before {
     padding-right: 50px;
     padding-top: 5px;
     padding-bottom: 5px;
+    @media screen and (max-width: 1199px) {
+        flex-wrap: wrap;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
 
 .section__footer {
