--- a/sass/pages/la_palette_du_gout.scss
+++ b/sass/pages/la_palette_du_gout.scss
@@ -16,6 +16,14 @@ header a {
     font-family: $font-secondary;
     font-size: 1.5em;
     font-weight: lighter;
+    letter-spacing: 1px;
+    @media screen and (max-width: 1199px) {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 30px;
+        padding-bottom: 30px;
+       }
 }
 
 .block__title-4-1 {
@@ -24,6 +32,9 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 80px;
         padding-right: 80px;
@@ -59,6 +70,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 15px;
         padding-right: 15px;
@@ -94,6 +108,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 10px;
         padding-right: 10px;
@@ -126,6 +143,9 @@ h4:before {
 .section__header-4 {
     text-align: center;
     padding-bottom: 50px;
+    @media screen and (max-width: 768px) {
+        padding-bottom: 30px;
+    }
     & h3 {
     font-size: 3em;
     font-family: $font-palette;
@@ -149,21 +169,9 @@ h4:before {
     padding-right: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
-}
-
-.section__footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    & h3 {
-        padding-left: 20px;
-        font-family: $font-note;
-        font-size: 2em;
-        font-weight: lighter;
-        color: $color-menu1-1;
-    }
-    & img {
-        max-height: 60px;
+    @media screen and (max-width: 1199px) {
+        flex-wrap: wrap;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 }
