--- a/sass/pages/le_chic_a_la_francaise.scss
+++ b/sass/pages/le_chic_a_la_francaise.scss
@@ -16,15 +16,14 @@ header a {
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.5em;
     font-weight: lighter;
-}
-
-.block__meals-line {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 5px;
-    padding-bottom: 10px;
+    letter-spacing: 1px;
+    @media screen and (max-width: 1199px) {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 30px;
+        padding-bottom: 30px;
+       }
 }
 
 .block__title-2-1 {
@@ -33,6 +32,9 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 1em;
@@ -66,6 +68,9 @@ h4:before {
 .section__header-2 {
     text-align: center;
     padding-bottom: 100px;
+    @media screen and (max-width: 768px) {
+        padding-bottom: 30px;
+    }
     & h3 {
     font-size: 2.5em;
     font-family: $font-chic;
@@ -94,6 +99,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 1em;
@@ -140,6 +148,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         font-family: Georgia, 'Times New Roman', Times, serif;
         font-size: 1em;
@@ -178,4 +189,18 @@ h4:before {
     font-size: 0.8em;
     padding-left: 60px;
     padding-right: 60px;
+}
+
+.block__meals-line {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    @media screen and (max-width: 1199px) {
+        flex-wrap: wrap;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
