--- a/sass/pages/le_delice_des_papilles.scss
+++ b/sass/pages/le_delice_des_papilles.scss
@@ -16,6 +16,14 @@ header a {
     font-family: $font-secondary;
     font-size: 1.5em;
     font-weight: lighter;
+    letter-spacing: 1px;
+    @media screen and (max-width: 1199px) {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        padding-top: 30px;
+        padding-bottom: 30px;
+       }
 }
 
 .block__title-3-1 {
@@ -24,6 +32,9 @@ header a {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 50px;
         padding-right: 50px;
@@ -59,6 +70,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 50px;
         padding-right: 50px;
@@ -94,6 +108,9 @@ h4:before {
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
     & h4 {
         padding-left: 50px;
         padding-right: 50px;
@@ -126,6 +143,9 @@ h4:before {
 .section__header-3 {
     text-align: center;
     padding-bottom: 100px;
+    @media screen and (max-width: 768px) {
+        padding-bottom: 30px;
+    }
     & h3 {
     font-size: 3em;
     font-family: $font-delice;
@@ -149,6 +169,11 @@ h4:before {
     padding-right: 50px;
     padding-top: 5px;
     padding-bottom: 10px;
+    @media screen and (max-width: 1199px) {
+        flex-wrap: wrap;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
 }
 
 .section__footer {
