--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,9 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    @media screen and (max-width: 768px) {
+        flex-wrap: wrap-reverse;
+    }
     & a {
         text-decoration: none;
         width: 100%;
@@ -61,7 +64,7 @@ main {
 
 .accueil-menu-1 {
     width: 400px;
-    margin-left: 40px;
+    margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 30px;
     background-color: $color-menu1;
@@ -125,7 +128,7 @@ main {
 
 .accueil-menu-3 {
     width: 400px;
-    margin-left: 60px;
+    margin-left: 20px;
     margin-right: 20px;
     background-color: $color-menu3;
     box-shadow: 0px 0px 4px 5px #f1f1f1;
@@ -155,12 +158,13 @@ main {
 .accueil-menu-4 {
     width: 400px;
     margin-left: 20px;
-    margin-right: 40px;
+    margin-right: 20px;
     background-color: $color-menu4;
     box-shadow: 0px 0px 4px 5px #f1f1f1;
     @media screen and (max-width: 768px) {
         max-width: 300px;
         font-size: 0.8em;
+        margin-top: 30px;;
     }
     & h2 {
     font-family: $font-palette;
