--- a/css/style.css
+++ b/css/style.css
@@ -1114,6 +1114,11 @@ main {
   flex-wrap: wrap;
   justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .block {
+    flex-wrap: wrap;
+  }
+}
 .block a {
   text-decoration: none;
   width: 100%;
@@ -1142,7 +1147,7 @@ main {
 
 .accueil-menu-1 {
   width: 400px;
-  margin-left: 40px;
+  margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 30px;
   background-color: #fcdfdb;
@@ -1209,7 +1214,7 @@ main {
 
 .accueil-menu-3 {
   width: 400px;
-  margin-left: 60px;
+  margin-left: 20px;
   margin-right: 20px;
   background-color: #f9f9f9;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
@@ -1241,7 +1246,7 @@ main {
 .accueil-menu-4 {
   width: 400px;
   margin-left: 20px;
-  margin-right: 40px;
+  margin-right: 20px;
   background-color: #fdfffd;
   box-shadow: 0px 0px 4px 5px #f1f1f1;
 }
@@ -1249,6 +1254,7 @@ main {
   .accueil-menu-4 {
     max-width: 300px;
     font-size: 0.8em;
+    margin-top: 30px;
   }
 }
 .accueil-menu-4 h2 {
