--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,7 +34,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     @media screen and (max-width: 768px) {
-        flex-wrap: wrap-reverse;
+        flex-wrap: wrap;
     }
     & a {
         text-decoration: none;
@@ -164,7 +164,7 @@ main {
     @media screen and (max-width: 768px) {
         max-width: 300px;
         font-size: 0.8em;
-        margin-top: 30px;;
+        margin-top: 30px;
     }
     & h2 {
     font-family: $font-palette;
